--- a/build.gradle
+++ b/build.gradle
@@ -9,24 +9,24 @@ dependencies {
     jrubyExec 'rubygems:yard:0.8.7.6'
 }
 
-task sphinx_html(type: Exec) {
+task sphinxHtml(type: Exec) {
     workingDir '.'
     commandLine 'make'
     args 'html'
 }
 
-task javadoc_html(type: Copy, dependsOn: [':embulk-core:javadoc']) {
+task javadocHtml(type: Copy, dependsOn: [':embulk-core:javadoc']) {
     doFirst { file('build/html/javadoc').mkdirs() }
     from project(':embulk-core').javadoc.destinationDir
     into 'build/html/javadoc'
 }
 
-task rdoc_html(type: JRubyExec) {
+task rdocHtml(type: JRubyExec) {
     workingDir '..'
     jrubyArgs '-ryard', '-eYARD::CLI::Yardoc.run(*ARGV)'
     script './lib/embulk/version.rb'  // dummy
     scriptArgs 'lib', '-o', 'embulk-docs/build/html/rdoc'
 }
 
-task site(type: Copy, dependsOn: ['sphinx_html', 'rdoc_html', 'javadoc_html']) {
+task site(type: Copy, dependsOn: ['sphinxHtml', 'rdocHtml', 'javadocHtml']) {
 }
